clusters/nibbler/apps/echo-envoy-gateway/gtw-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo
  namespace: echo-envoy-gateway
spec:
  hostnames:
    - echo.envoy.cluster.local
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-envoy-gateway-1
          kind: Service
          port: 5090
          weight: 75
        - name: echo-envoy-gateway-2
          kind: Service
          port: 6090
          weight: 25
    - matches:
        - path:
            type: PathPrefix
            value: /gw2
      backendRefs:
        - name: echo-envoy-gateway-2
          port: 6090
